fix spacing, subtler form validation

--- a/_scss/ucla-iam-core/_webshim-styling.scss
+++ b/_scss/ucla-iam-core/_webshim-styling.scss
@@ -2,10 +2,11 @@
 // options in sso.js
 
 .ws-errorbox {
-  width: 100%;
-  margin-top: -$half-spacing;
-  @extend .error-box;
+  margin-top: -$default-spacing;
+  margin-bottom: $default-spacing;
   p {
+    font-family: $font-stack;
+    color: $error-color;
     text-align: left;
   }
 }
