--- a/_scss/ucla-this-app/_login-form.scss
+++ b/_scss/ucla-this-app/_login-form.scss
@@ -68,7 +68,7 @@
 }
 
 .secondary-login {
-  margin-top: $quad-spacing;
+  margin-top: $default-spacing;
 }
 
 .secondary-button {
